Fix crash on moving shape layers

Now we use Qt::AutoConnection signal/slot connection to synchronize
UI and Image threads.

Above that, we do not move the paint device, because 1) we update the
shape anyway and 2) it causes concurrent access to the moving device
that causes a crash.

BUG:289746